refactor http to use adapter
