# domain/todo.go
@@ -15,9 +15,14 @@ type NewTodo struct {
 	Description string `json:"description"`
 }
 
+type UpdateTodo struct {
+	Done        bool   `json:"done"`
+	Description string `json:"description"`
+}
+
 type TodoRepository interface {
 	CreateTodo(newTodo *NewTodo) (*Todo, error)
 	GetTodo(id string) (*Todo, error)
-	UpdateTodo(id string, todo *Todo) (*Todo, error)
+	UpdateTodo(id string, todo *UpdateTodo) (*Todo, error)
 	DeleteTodo(id string) error
 }
