# memory/memory.go
@@ -58,7 +58,7 @@ func (r *InMemoryTodoRepository) GetTodo(id string) (*domain.Todo, error) {
 	return todo, nil
 }
 
-func (r *InMemoryTodoRepository) UpdateTodo(id string, todo *domain.Todo) (*domain.Todo, error) {
+func (r *InMemoryTodoRepository) UpdateTodo(id string, todo *domain.UpdateTodo) (*domain.Todo, error) {
 	if todo == nil {
 		return nil, ErrInvalidParameter
 	}
